added extension methods to help calculate the points on the path on the fly as I go along, as opposed to calling methods to calculate everything at the start in one huge method call.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\RoadSplines\Scripts\RoadPointInfo.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\SplineEditor.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\Utils.cs" />
+    <Compile Include="Assets\RoadSplines\Scripts\UvCalculator.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\ModularCar\CarControllerV3.cs" />
     <Compile Include="Assets\Scripts\ModularCar\ForcePower.cs" />
