--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,10 +67,10 @@
     <Compile Include="Assets\RoadSplines\Scripts\CurvePoint.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\Internal\CatmullRom.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\Internal\MeshMaker.cs" />
+    <Compile Include="Assets\RoadSplines\Scripts\Internal\UvCalculator.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\RoadPointInfo.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\SplineEditor.cs" />
     <Compile Include="Assets\RoadSplines\Scripts\Utils.cs" />
-    <Compile Include="Assets\RoadSplines\Scripts\UvCalculator.cs" />
     <Compile Include="Assets\Scripts\CameraController.cs" />
     <Compile Include="Assets\Scripts\ModularCar\CarControllerV3.cs" />
     <Compile Include="Assets\Scripts\ModularCar\ForcePower.cs" />
